Add unit tests for authentication and form handling
- Implement AuthControllerTest to cover login, registration, OTP verification, password reset, and forgot password functionalities.
- Create FormControllerTest to validate form creation, retrieval, analytics, submission, and deletion endpoints.
- Introduce CustomUserDetailsServiceTest to ensure user loading logic works as expected.
- Enhance JwtTokenProviderTest with comprehensive token generation and validation tests.
- Update AuditServiceImplTest to verify logging behavior and context handling.
- Revise AuthServiceImplTest to include tests for user registration, login, and password management scenarios.
- Improve CsvHelperTest to validate CSV generation for form responses and handle various data formats.